--- a/wwr/practice.html
+++ b/wwr/practice.html
@@ -46,10 +46,30 @@
         }
 
         /* Pseudo classes, navigation on hover */
+        nav {
+            background: salmon;
+            width: 75%;
+            margin: 0 auto;
+            text-align: center;
+        }
+        li {
+            display: inline-block;
+            margin: 0 20px;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+        }
+        nav a:hover {
+            background: yellow;
+            color: darkgray;
+        }
+       
 
     </style>
 </head>
 <body>
+    <div id=""></div>
     <!-- Absolute Units of Measure -->
     <div id="partone">
         <h1>Absolute Units</h1>
@@ -92,10 +112,10 @@
     <!-- Navigation using unordered list element -->
     <nav>
         <ul>
-            <li>Link One</li>
-            <li>Link Two</li>
-            <li>Link Three</li>
-            <li>Link Four</li>
+            <li><a href="#">Link One</a></li>
+            <li><a href="#">Link Two</a></li>
+            <li><a href="#">Link Three</a></li>
+            <li><a href="#">Link Four</a></li>
         </ul>
     </nav>
     <!-- Paragraph pirate/cupcake classes -->
