--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 | </title>
+    <title>WDD130 | </title> 
+    <style>
+        body {
+            background-color: lightblue;
+            font-family: Arial, sans-serif;
+        }
+        #profile {
+            width: 300px;
+            border: 10px solid green;
+        }
+    </style>
+</head>
+<body>
     <h1>Hello, I am Gustave! Welcome to my webpage!!</h1>
     <p>I am happy to be here at BYU - Idaho. </p>
     <p>My major is Computer science and I love this class. </p>
     <p>I have been baptized 6 years ago now, and I have served a full time mission in Ivory Coast.</p>
 
-    <img src="shark.jpeg" alt="">
+    <img id="profile"  src="images/shark.jpeg" alt="The Shark image">
+    <a href="wwr/index.html">Rafting Website</a>
+    <a href="wwr/site-plan-rafting.html"></a>
+    <a href="practice/demo"></a>
     <p>The Shark!</p>
-    
-</head>
-<body>
     
 </body>
 </html>
