--- a/painting/site-plan.html
+++ b/painting/site-plan.html
@@ -126,29 +126,29 @@
       </h2> 
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [Introduction to the website, overview of features, and call-to-action buttons (e.g., browse collections, learn about artists).]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="img1.jpeg" alt="image for homepage">
+        <img src="img1_.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Art Collections</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Descriptions of curated collections, categories of art (e.g., nature, abstract, modern), and featured artworks.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="img2.jpg" alt="image for page">
+        <img src="img2_.jpeg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Artist Spotlights</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Profiles of featured artists, including background information and insight into their creative processes.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="img3.jpg" alt="image for page3">
+        <img src="img3_.png" alt="image for page3">
 
       </ul>
       <hr>
