--- a/personal/index.html
+++ b/personal/index.html
@@ -27,16 +27,19 @@
         <footer>
             <p>Paintings &copy; 2024 - Gustave Mufa</p>
             <p><a href="https://mufagustave3.github.io/WDD130/painting/site-plan.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="index.html">Home</a></p>
+            <p><a href="https://mufagustave3.github.io/WDD130/personal/gallery.html">Gallery</a></p>
+            <p><a href="https://mufagustave3.github.io/WDD130/personal/contactus.html">Contact Us</a></p>
+            
             <div class="Social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="instagram.png" alt="instagram icon">
                 </a>
     
             </div>
