--- a/personal/contactus.html
+++ b/personal/contactus.html
@@ -22,6 +22,11 @@
              
         </div>
         <main class="home-grid">
+            <img src="image8.jpg" alt="">
+            <h1>Contact Us</h1>
+            <input type="text">
+            <input type="text">
+            <button>send</button>
             
         </main>
         <footer>
