--- a/painting/site-plan.html
+++ b/painting/site-plan.html
@@ -129,8 +129,8 @@
         [Introduction to the website, overview of features, and call-to-action buttons (e.g., browse collections, learn about artists).]
       </p>
       <p>Images for the Home page</p>
-        <img src="img1.jpeg" alt="image for homepage">
-        <img src="img1_.jpg" alt="image for homepage">
+        <img src="" alt="image for homepage">
+        <img src="image1.jpg" alt="image for homepage">
 
       </ul>
       <h3>Art Collections</h3>
@@ -138,8 +138,8 @@
         Descriptions of curated collections, categories of art (e.g., nature, abstract, modern), and featured artworks.
       </p>
       <p>Images for the Page 2</p>
-        <img src="img2.jpg" alt="image for page">
-        <img src="img2_.jpeg" alt="image for page">
+        <img src="image2.jpg" alt="image for page">
+        <img src="image4.jpg" alt="image for page">
 
       </ul>
       <h3>Artist Spotlights</h3>
@@ -147,8 +147,8 @@
         Profiles of featured artists, including background information and insight into their creative processes.
       </p>
       <p>Images for the Page 3</p>
-        <img src="img3.jpg" alt="image for page3">
-        <img src="img3_.png" alt="image for page3">
+        <img src="image5.webp" alt="image for page3">
+        <img src="image7.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -163,18 +163,21 @@
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="https://wireframe.cc/EXhfPN" alt="home page wireframe">
+      <a href="https://wireframe.cc/EXhfPN">wireframe Home page</a>
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="https://wireframe.cc/0Dky8f" alt="page 2 wireframe">
+      <a href="https://wireframe.cc/0Dky8f"> Wireframe P2</a>
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
       <img src="https://wireframe.cc/uvzOnE" alt="page 3 wireframe">
+      <a href="https://wireframe.cc/uvzOnE">Wireframe P3</a>
     </main>
   </body>
 
