--- a/personal/index.html
+++ b/personal/index.html
@@ -25,16 +25,16 @@
                     <a href="index.html">
                         <span class="word"> <span class="letter">A</span><span class="letter">r</span><span class="letter">t</span> </span>
                         <span class="word"> <span class="letter">b</span><span class="letter">y</span> </span>
-                        <span class="word"> <span class="letter">D</span><span class="letter">i</span><span class="letter">d</span><span class="letter">i</span><span class="letter">e</span><span class="letter">r</span> </span>
+                        <span class="word"> <span class="letter">G</span><span class="letter">u</span><span class="letter">s</span><span class="letter">t</span><span class="letter">a</span><span class="letter">v</span><span class="letter">e</span> </span>
                         <span class="word"> <span class="letter">M</span><span class="letter">u</span><span class="letter">f</span><span class="letter">a</span> </span>
                     </a>
             </h1>
                 
             
             <nav>
-                <a href="gallery.html">Gallery</a>
-                <a href="contactus.html">Contact us</a>
-                <a href="about.html">About</a>
+                <a href="gallery.html" target="_blank" rel="noopener noreferrer">Gallery </a>
+                <a href="contactus.html" target="_blank" rel="noopener noreferrer">Contact us</a>
+                <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
             </nav>
         </div>
     </header>
