--- a/wwr/practice/compoent.html
+++ b/wwr/practice/compoent.html
@@ -41,6 +41,10 @@
           button:hover, a:hover {
             opacity: 0.7;
           }
+          img {
+            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+            filter: grayscale(100%);
+          }
     </style>
 </head>
 <body>
