--- a/personal/contactus.html
+++ b/personal/contactus.html
@@ -138,7 +138,7 @@
     <header>
         <div class="container nav-container">
             <h1>
-                <a href="index.html">Art by Didier Mufa</a>
+                <a href="index.html">Art by Gustave Mufa</a>
             </h1>
             
             <nav>
@@ -167,7 +167,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Art by Didier Mufa. All rights reserved.</p>
+            <p>&copy; 2024 Art by Gustave Mufa. All rights reserved.</p>
         </div>
     </footer>
 
