--- a/personal/index.html
+++ b/personal/index.html
@@ -47,8 +47,8 @@
                 <p>&copy; 2024 Art by Gustave Mufa. All rights reserved.</p>
                 <p><a href="https://mufagustave3.github.io/WDD130/painting/site-plan.html">Site Plan</a></p>
                 <p><a href="index.html">Home</a></p>
-                <p><a href="https://mufagustave3.github.io/WDD130/personal/gallery.html">Gallery</a></p>
-                <p><a href="https://mufagustave3.github.io/WDD130/personal/contactus.html">Contact Us</a></p>
+                <p><a href="gallery.html">Gallery</a></p>
+                <p><a href="contactus.html">Contact Us</a></p>
         </div>
             
             
