--- a/personal/contactus.html
+++ b/personal/contactus.html
@@ -170,7 +170,7 @@
             
             <nav>
                 <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact us</a>
+                <a href="contactus.html">Contact us</a>
                 <a href="about.html">About</a>
             </nav>
         </div>
